[gd_scene load_steps=4 format=3 uid="uid://i13mh4yeud4g"]

[ext_resource type="Texture2D" uid="uid://bas13pavfctl1" path="res://assets/misc/circle_aoe.png" id="1_2ei0j"]
[ext_resource type="Script" uid="uid://npwqy3bbjeh" path="res://scripts/mechanics/spread.gd" id="1_l683w"]

[sub_resource type="CircleShape2D" id="CircleShape2D_2ei0j"]
radius = 16.0

[node name="Spread" type="Area2D"]
scale = Vector2(7, 7)
script = ExtResource("1_l683w")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(1, 0.45882353, 0, 0.5137255)
texture = ExtResource("1_2ei0j")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_2ei0j")
debug_color = Color(0.99907225, 0, 0.13738623, 0.41960785)

[node name="SpreadDelay" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="timeout" from="SpreadDelay" to="." method="_on_spread_delay_timeout"]
